# ResumeForgeAI

./: .env.example  .gitignore  CONTRIBUTORS  LICENSE  README.md  app.py  generate_resume.py  main.py  main_pipeline.py  normalize_sections.py  parse.py  pyproject.toml  requirements.txt  resume_builder.py  resume_builder_helper.py  resume_data.json  section_extractor.py
LLM/: experience.py  main.py.txt  skills.py
LLM/prompts/: experience_prompt  skills_prompt.txt
Similarity_machine/: percentage_yielder.py
output/: Arjun_Mehta_resume.aux  Arjun_Mehta_resume.out  Arjun_Mehta_resume.tex  generated_resume.tex
pages/: 1_login.py  2_profile.py  3_upload.py
processing_files/: jd_sections.json  normalized_jd_sections.json  output.txt  raw_jd_sections.json
prompts/: section_normalizer_human.txt  section_normalizer_system.txt
sections_content_builder/: achievements.py  courses.py  experience.py  positions.py  projects.py  skills.py
sections_content_builder/prompts/: achievements_prompt.txt  courses_prompt.txt  experience_prompt.txt  positions_prompt.txt  projects_prompt.txt  skills_prompt.txt
templates/: iitg_resume.tex  resume_template.tex
test/: JSON_schema.json  test_llm.py
user/Arjun_Mehta/outputs/: Arjun_Mehta_resume.aux  Arjun_Mehta_resume.out  Arjun_Mehta_resume.tex
user/db/: db_connect.py  db_queries.py  db_setup.py
