[project]
name = "new-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "mysql-connector-python>=9.7.0",
    "ollama>=0.6.2",
    "groq>=1.2.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "regex>=2026.5.9",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "rich>=15.0.0",
    "jinja2>=3.1.6",
]
